--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "outDir": "./dist",
-    "forceConsistentCasingInFileNames": true
+    "target": "ES2022",
+    "removeComments": false,
+    "outDir": "javascript",
+    "sourceMap": true,
+    "noEmitOnError": true,
+    "alwaysStrict": true,
+    "allowUnreachableCode": false
   }
 }
